k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: python-app # update label to match deploy label
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
