k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx # we only have 1 classname at this point so this isn't necessary
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app # maintain consistent naming
            port:
              number: 8080
